[package]
name = "rust_lib_fastreminder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
rusqlite = { version = "0.31.0", features = ["bundled"] }
once_cell = "1.19.0"
chrono = "0.4.31"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
